--- a/samples/src/main/res/layout/activity_main.xml
+++ b/samples/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clickable="true"
-                    android:background="@drawable/sampleOne"
+                    android:background="@drawable/sample_one"
                     android:scaleType="centerCrop"/>
 
         </com.indatus.swipecontrol.library.BackgroundContainer>
@@ -50,7 +50,7 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:clickable="true"
-                    android:background="@drawable/sampleTwo"/>
+                    android:background="@drawable/sample_two"/>
 
         </com.indatus.swipecontrol.library.BackgroundContainer>
 
@@ -70,7 +70,7 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:clickable="true"
-                    android:background="@drawable/sampleThree"/>
+                    android:background="@drawable/sample_three"/>
 
         </com.indatus.swipecontrol.library.BackgroundContainer>
 
